--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,4 +27,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: java -version
+        run: java public class Main {
+    public static void main(String[] args) {
+        System.out.println("This will be printed");
+    }
+}
